--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,1 @@
-/*@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-body {
-  @apply bg-[#dfeaf4] font-sans text-slate-800 antialiased;
-}
+@import "tailwindcss";
